fix button spacing + underline on button

--- a/src/styles/components/btn.scss
+++ b/src/styles/components/btn.scss
@@ -6,6 +6,7 @@
     &--project {
         display: inline-block;
         margin:10px;
+        text-decoration: none;
     }
 }
 
